--- a/app/src/main/res/layout/view_book_page.xml
+++ b/app/src/main/res/layout/view_book_page.xml
@@ -31,8 +31,7 @@
         android:id="@+id/content_text_view"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1"
-        android:textIsSelectable="true" />
+        android:layout_weight="1" />
 
     <LinearLayout
         android:id="@+id/bottom_bar"
