--- a/app/src/main/res/layout/item_search.xml
+++ b/app/src/main/res/layout/item_search.xml
@@ -19,7 +19,7 @@
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="UnusedAttribute" />
 
-    <io.legado.app.ui.widget.BadgeView
+    <io.legado.app.ui.widget.text.BadgeView
         android:id="@+id/bv_originCount"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -64,7 +64,7 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal">
 
-            <io.legado.app.lib.theme.view.ATEAccentBgTextView
+            <io.legado.app.ui.widget.text.AccentBgTextView
                 android:id="@+id/tv_kind"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -74,9 +74,9 @@
                 android:singleLine="true"
                 android:text="@string/app_name"
                 android:textSize="12sp"
-                app:abt_radius="2dp" />
+                app:bg_radius="2dp" />
 
-            <io.legado.app.lib.theme.view.ATEAccentBgTextView
+            <io.legado.app.ui.widget.text.AccentBgTextView
                 android:id="@+id/tv_kind_1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -86,9 +86,9 @@
                 android:singleLine="true"
                 android:text="@string/app_name"
                 android:textSize="12sp"
-                app:abt_radius="2dp" />
+                app:bg_radius="2dp" />
 
-            <io.legado.app.lib.theme.view.ATEAccentBgTextView
+            <io.legado.app.ui.widget.text.AccentBgTextView
                 android:id="@+id/tv_kind_2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -98,7 +98,7 @@
                 android:singleLine="true"
                 android:text="@string/app_name"
                 android:textSize="12sp"
-                app:abt_radius="2dp" />
+                app:bg_radius="2dp" />
 
         </LinearLayout>
 
