--- a/app/src/main/res/layout/activity_book_info.xml
+++ b/app/src/main/res/layout/activity_book_info.xml
@@ -96,7 +96,7 @@
                 android:paddingRight="5dp"
                 android:text="@string/change_origin"
                 android:textSize="16sp"
-                app:bg_radius="2dp" />
+                app:radius="2dp" />
 
         </LinearLayout>
 
@@ -118,7 +118,7 @@
                 android:singleLine="true"
                 android:text="@string/app_name"
                 android:textSize="14sp"
-                app:bg_radius="2dp" />
+                app:radius="2dp" />
 
             <io.legado.app.ui.widget.text.AccentBgTextView
                 android:id="@+id/tv_kind_1"
@@ -129,7 +129,7 @@
                 android:singleLine="true"
                 android:text="@string/app_name"
                 android:textSize="14sp"
-                app:bg_radius="2dp" />
+                app:radius="2dp" />
 
             <io.legado.app.ui.widget.text.AccentBgTextView
                 android:id="@+id/tv_kind_2"
@@ -141,7 +141,7 @@
                 android:singleLine="true"
                 android:text="@string/app_name"
                 android:textSize="14sp"
-                app:bg_radius="2dp" />
+                app:radius="2dp" />
 
         </LinearLayout>
 
