--- a/app/src/main/res/layout/dialog_replace_edit.xml
+++ b/app/src/main/res/layout/dialog_replace_edit.xml
@@ -30,7 +30,7 @@
                 android:layout_height="wrap_content"
                 android:hint="@string/replace_rule_summary">
 
-                <io.legado.app.lib.theme.view.ATEEditText
+                <io.legado.app.ui.widget.text.EditText
                     android:id="@+id/et_name"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content" />
@@ -42,7 +42,7 @@
                 android:layout_height="wrap_content"
                 android:hint="@string/group">
 
-                <io.legado.app.lib.theme.view.ATEEditText
+                <io.legado.app.ui.widget.text.EditText
                     android:id="@+id/et_group"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content" />
@@ -54,7 +54,7 @@
                 android:layout_height="wrap_content"
                 android:hint="@string/replace_rule">
 
-                <io.legado.app.lib.theme.view.ATEEditText
+                <io.legado.app.ui.widget.text.EditText
                     android:id="@+id/et_replace_rule"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content" />
@@ -72,7 +72,7 @@
                 android:layout_height="wrap_content"
                 android:hint="@string/replace_to">
 
-                <io.legado.app.lib.theme.view.ATEEditText
+                <io.legado.app.ui.widget.text.EditText
                     android:id="@+id/et_replace_to"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content" />
@@ -84,7 +84,7 @@
                 android:layout_height="wrap_content"
                 android:hint="@string/use_to">
 
-                <io.legado.app.lib.theme.view.ATEEditText
+                <io.legado.app.ui.widget.text.EditText
                     android:id="@+id/et_scope"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content" />
