--- a/app/src/main/res/layout/item_source_edit.xml
+++ b/app/src/main/res/layout/item_source_edit.xml
@@ -5,7 +5,7 @@
     android:layout_height="wrap_content"
     android:paddingTop="3dp">
 
-    <io.legado.app.lib.theme.view.ATEEditText
+    <io.legado.app.ui.widget.text.EditText
         android:id="@+id/editText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
