--- a/app/src/main/res/layout/dialog_page_key.xml
+++ b/app/src/main/res/layout/dialog_page_key.xml
@@ -21,7 +21,7 @@
         android:layout_margin="5dp"
         android:hint="@string/prev_page_key">
 
-        <io.legado.app.lib.theme.view.ATEEditText
+        <io.legado.app.ui.widget.text.EditText
             android:id="@+id/et_prev"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -36,7 +36,7 @@
         android:layout_margin="5dp"
         android:hint="@string/next_page_key">
 
-        <io.legado.app.lib.theme.view.ATEEditText
+        <io.legado.app.ui.widget.text.EditText
             android:id="@+id/et_next"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
