--- a/app/src/main/res/layout/dialog_page_key.xml
+++ b/app/src/main/res/layout/dialog_page_key.xml
@@ -15,7 +15,7 @@
         android:textStyle="bold"
         android:text="@string/custom_page_key" />
 
-    <io.legado.app.lib.theme.view.ATETextInputLayout
+    <io.legado.app.ui.widget.text.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="5dp"
@@ -28,9 +28,9 @@
             android:inputType="number"
             android:singleLine="true" />
 
-    </io.legado.app.lib.theme.view.ATETextInputLayout>
+    </io.legado.app.ui.widget.text.TextInputLayout>
 
-    <io.legado.app.lib.theme.view.ATETextInputLayout
+    <io.legado.app.ui.widget.text.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="5dp"
@@ -43,7 +43,7 @@
             android:inputType="number"
             android:singleLine="true" />
 
-    </io.legado.app.lib.theme.view.ATETextInputLayout>
+    </io.legado.app.ui.widget.text.TextInputLayout>
 
     <TextView
         android:id="@+id/tv_ok"
