--- a/app/src/main/res/layout/dialog_replace_edit.xml
+++ b/app/src/main/res/layout/dialog_replace_edit.xml
@@ -24,7 +24,7 @@
             android:orientation="vertical"
             android:padding="10dp">
 
-            <io.legado.app.lib.theme.view.ATETextInputLayout
+            <io.legado.app.ui.widget.text.TextInputLayout
                 android:id="@+id/til_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -34,9 +34,9 @@
                     android:id="@+id/et_name"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content" />
-            </io.legado.app.lib.theme.view.ATETextInputLayout>
+            </io.legado.app.ui.widget.text.TextInputLayout>
 
-            <io.legado.app.lib.theme.view.ATETextInputLayout
+            <io.legado.app.ui.widget.text.TextInputLayout
                 android:id="@+id/til_group"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -46,9 +46,9 @@
                     android:id="@+id/et_group"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content" />
-            </io.legado.app.lib.theme.view.ATETextInputLayout>
+            </io.legado.app.ui.widget.text.TextInputLayout>
 
-            <io.legado.app.lib.theme.view.ATETextInputLayout
+            <io.legado.app.ui.widget.text.TextInputLayout
                 android:id="@+id/til_replace_rule"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -58,7 +58,7 @@
                     android:id="@+id/et_replace_rule"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content" />
-            </io.legado.app.lib.theme.view.ATETextInputLayout>
+            </io.legado.app.ui.widget.text.TextInputLayout>
 
             <io.legado.app.lib.theme.view.ATECheckBox
                 android:id="@+id/cb_use_regex"
@@ -66,7 +66,7 @@
                 android:layout_height="wrap_content"
                 android:text="@string/use_regex" />
 
-            <io.legado.app.lib.theme.view.ATETextInputLayout
+            <io.legado.app.ui.widget.text.TextInputLayout
                 android:id="@+id/til_replace_to"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -76,9 +76,9 @@
                     android:id="@+id/et_replace_to"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content" />
-            </io.legado.app.lib.theme.view.ATETextInputLayout>
+            </io.legado.app.ui.widget.text.TextInputLayout>
 
-            <io.legado.app.lib.theme.view.ATETextInputLayout
+            <io.legado.app.ui.widget.text.TextInputLayout
                 android:id="@+id/til_scope"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -88,7 +88,7 @@
                     android:id="@+id/et_scope"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content" />
-            </io.legado.app.lib.theme.view.ATETextInputLayout>
+            </io.legado.app.ui.widget.text.TextInputLayout>
 
         </LinearLayout>
     </ScrollView>
