--- a/app/src/main/res/layout/view_detail_seek_bar.xml
+++ b/app/src/main/res/layout/view_detail_seek_bar.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="horizontal"
     android:gravity="center">
 
@@ -43,6 +43,7 @@
         android:layout_height="wrap_content"
         android:gravity="right"
         android:singleLine="true"
-        tools:ignore="RtlHardcoded" />
+        android:text="0"
+        tools:ignore="HardcodedText,RtlHardcoded" />
 
 </LinearLayout>
